ALF-278: Сделаны модели для подписки на тип и подписки на объект
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@861 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/repo/src/main/config/messages/subscriptions.properties
+++ b/lecm-subscriptions/repo/src/main/config/messages/subscriptions.properties
@@ -14,3 +14,7 @@ lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-grou
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.description=Work group
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.title=Notification type
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.description=Notification type
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_object-type-assoc.title=Object type
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_object-type-assoc.description=Object type
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_event-category-assoc.title=Event Category
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_event-category-assoc.description=Event Category
