--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -1,2 +1,3 @@
 page.subscriptions=Subscriptions
+page.subscriptions-to-object=Subscriptions to object
 page.subscriptions.filter.label=(content filtered)
