[+] Привязка запуска процесса к бизнес ролям и небольшой багфиксинг
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@871 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/pom.xml
+++ b/lecm-statemachine-editor/pom.xml
@@ -13,7 +13,7 @@
     <groupId>ru.it.lecm.statemachine.editor</groupId>
     <artifactId>statemachine-editor</artifactId>
     <packaging>pom</packaging>
-    <name>Logic ECM Statemachine editor</name>
+    <name>Logic ECM Statemachine Editor</name>
 
     <modules>
         <module>repo</module>
