--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -11,7 +11,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableType.title=Ty
 lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableValue.title=Value
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=Workflow
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
-lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
+lecm-stmeditor_model.association.lecm-stmeditor_assignee.title=Assignee
 lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=Start Status
 
 
