--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 	    <module>lecm-dictionary-regions</module>
 	    <module>lecm-dictionary-test</module>
 	    <module>lecm-contracts</module>
+		<module>lecm-statemachine</module>
 		<module>lecm-statemachine-editor</module>
 		<module>lecm-theme</module>
 	    <module>lecm-delegation</module>
