--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -167,6 +167,13 @@
 			<type>amp</type>
 		</dependency>
 		<dependency>
+			<groupId>ru.it.lecm.statemachine</groupId>
+			<artifactId>statemachine-repo</artifactId>
+			<version>${platform.version}</version>
+			<scope>runtime</scope>
+			<type>amp</type>
+		</dependency>
+		<dependency>
 			<groupId>ru.it.lecm.statemachine.editor</groupId>
 			<artifactId>statemachine-editor-repo</artifactId>
 			<version>${platform.version}</version>
