Порядок в POM файлах
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@876 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/pom.xml
+++ b/lecm-delegation/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>ru.it.lecm.delegation</groupId>
 	<artifactId>lecm-delegation</artifactId>
 	<packaging>pom</packaging>
-	<name>${project.artifactId}-${project.version}</name>
+	<name>Logic ECM Delegation</name>
 
 	<modules>
 		<module>repo</module>
