--- a/lecm-orgstructure/repo/pom.xml
+++ b/lecm-orgstructure/repo/pom.xml
@@ -26,7 +26,7 @@
 
     <artifactId>orgstructure-repo</artifactId>
     <packaging>amp</packaging>
-    <name>OrgStructure Repo</name>
+    <name>Logic ECM Organization Structure Repo</name>
     <!--
        An Alfresco version number must be of the form 1.2.3.4. Using
        1.0-SNAPSHOT as the AMP version will create an exception. See
