--- a/lecm-delegation/share/pom.xml
+++ b/lecm-delegation/share/pom.xml
@@ -10,7 +10,7 @@
 
 	<artifactId>lecm-delegation-share</artifactId>
 	<packaging>amp</packaging>
-	<name>${project.artifactId}-${project.version}</name>
+	<name>Logic ECM Delegation Share</name>
 	<description>this is delegation share module</description>
 	<properties>
 		<module.log.level>debug</module.log.level>
