--- a/lecm-experts/repo/pom.xml
+++ b/lecm-experts/repo/pom.xml
@@ -26,7 +26,7 @@
 
     <artifactId>experts-repo</artifactId>
     <packaging>amp</packaging>
-    <name>GetExperts Repo</name>
+    <name>Logic ECM Experts Repo</name>
     <!--
        An Alfresco version number must be of the form 1.2.3.4. Using
        1.0-SNAPSHOT as the AMP version will create an exception. See
