--- a/lecm-orgstructure/share/pom.xml
+++ b/lecm-orgstructure/share/pom.xml
@@ -25,7 +25,7 @@
 
     <artifactId>orgstructure-share</artifactId>
     <packaging>amp</packaging>
-    <name>OrgStructure Share</name>
+    <name>Logic ECM Organization Structure Share</name>
 	<!--
 		An Alfresco version number must be of the form 1.2.3.4. Using
 		1.0-SNAPSHOT as the AMP version will create an exception. See
