Подписки. Добавленно меню.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@880 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -1,3 +1,4 @@
 page.subscriptions=Subscriptions
+page.subscriptions-to-type=Subscriptions to type
 page.subscriptions-to-object=Subscriptions to object
 page.subscriptions.filter.label=(content filtered)
