ALF-286: добавлен тулбар для подписок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@882 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -2,3 +2,6 @@ page.subscriptions=Subscriptions
 page.subscriptions-to-type=Subscriptions to type
 page.subscriptions-to-object=Subscriptions to object
 page.subscriptions.filter.label=(content filtered)
+
+header.subscriptions.label=Subscriptions
+header.subscriptions.description=Subscriptions
