Создан модуль Orgstructure API и настроена Maven сборка для него
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@885 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/repo/pom.xml
+++ b/lecm-delegation/repo/pom.xml
@@ -50,14 +50,12 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		<!-- Don't add here amp dependencies as it will break amp packaging -->
 		<dependency>
 			<groupId>ru.it.lecm.orgstructure</groupId>
-			<artifactId>orgstructure-repo</artifactId>
-			<version>${platform.version}</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/../../lecm-orgstructure/repo/target/orgstructure-repo-${platform.version}/lib/orgstructure-repo-${platform.version}.jar</systemPath>
+			<artifactId>orgstructure-repo-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
+		<!-- Don't add here amp dependencies as it will break amp packaging -->
 	</dependencies>
 
 	<!--
