ALF-286: Добавлена старница с подписками на экземпляры ALF-283: Добавлен аспект для подписки на экземпляр
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@889 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -3,5 +3,7 @@ page.subscriptions-to-type=Subscriptions to type
 page.subscriptions-to-object=Subscriptions to object
 page.subscriptions.filter.label=(content filtered)
 
+button.subscribe=Subscribe
+
 header.subscriptions.label=Subscriptions
 header.subscriptions.description=Subscriptions
