Модуль lecm-calendar добавлен в сборку. В главное меню добавлена кнопка для этого модуля.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@894 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 	    <module>lecm-subscriptions</module>
         <module>lecm-notifications</module>
         <module>lecm-business-journal</module>
+        <module>lecm-calendar</module>
     </modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
