ALF-283: Добавлена подписка для сотрудников
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@899 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -4,6 +4,9 @@ page.subscriptions-to-object=Subscriptions to object
 page.subscriptions.filter.label=(content filtered)
 
 button.subscribe=Subscribe
+label.subscribe.title=Subscribe
+message.save.subscribe.success=Subscribe create success
+message.save.subscribe.failure=Subscribe create failure
 
 header.subscriptions.label=Subscriptions
 header.subscriptions.description=Subscriptions
