--- a/lecm-orgstructure/api/pom.xml
+++ b/lecm-orgstructure/api/pom.xml
@@ -79,6 +79,11 @@
             <groupId>org.springframework.extensions.surf</groupId>
             <artifactId>spring-webscripts</artifactId>
         </dependency>
+	    <dependency>
+		    <groupId>ru.it.lecm.base</groupId>
+		    <artifactId>base-repo-api</artifactId>
+		    <version>${project.version}</version>
+	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
