api для справочников вынесен в отдельный сервис
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@906 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/pom.xml
+++ b/lecm-dictionary/pom.xml
@@ -16,6 +16,7 @@
     <name>Logic ECM Dictionary</name>
 
     <modules>
+        <module>api</module>
         <module>repo</module>
         <module>share</module>
     </modules>
