--- a/lecm-calendar/repo/src/main/config/log4j.properties
+++ b/lecm-calendar/repo/src/main/config/log4j.properties
@@ -38,5 +38,4 @@
    #
    #-----------------------------------------------------------------------
 
-log4j.logger.ru.it.lecm.calendar=${module.log.level}
-log4j.logger.ru.it.lecm.sample=${module.log.level}
+log4j.logger.ru.it.lecm.wcalendar=${module.log.level}
