ALF-287: Добавлена кнопка удаления подписки на объект
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@913 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions.properties
@@ -4,9 +4,15 @@ page.subscriptions-to-object=Subscriptions to object
 page.subscriptions.filter.label=(content filtered)
 
 button.subscribe=Subscribe
+button.unsubscribe=Unsubscribe
 label.subscribe.title=Subscribe
 message.save.subscribe.success=Subscribe create success
 message.save.subscribe.failure=Subscribe create failure
+
+message.confirm.unsubscribe.title=Unsubscribe
+message.confirm.unsubscribe.description=Unsubscribe?
+message.unsibscribe.failure=Unsibscribe failure
+message.unsibscribe.success=Unsibscribe success
 
 header.subscriptions.label=Subscriptions
 header.subscriptions.description=Subscriptions
