--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,30 @@
                         <groupId>org.apache.poi</groupId>
                         <artifactId>poi-ooxml</artifactId>
                     </exclusion>
+	                <exclusion>
+		                <groupId>org.codehaus.jackson</groupId>
+		                <artifactId>jackson-core-asl</artifactId>
+	                </exclusion>
+	                <exclusion>
+		                <groupId>org.codehaus.jackson</groupId>
+		                <artifactId>jackson-mapper-asl</artifactId>
+	                </exclusion>
+                    <exclusion>
+		                <groupId>bouncycastle</groupId>
+		                <artifactId>bcmail-jdk14</artifactId>
+	                </exclusion>
+                    <exclusion>
+		                <groupId>bouncycastle</groupId>
+		                <artifactId>bcprov-jdk14</artifactId>
+	                </exclusion>
+                    <exclusion>
+		                <groupId>org.bouncycastle</groupId>
+		                <artifactId>bcmail-jdk14</artifactId>
+	                </exclusion>
+                    <exclusion>
+		                <groupId>org.bouncycastle</groupId>
+		                <artifactId>bcprov-jdk14</artifactId>
+	                </exclusion>
                 </exclusions>
             </dependency>
             <!--
