Выносим логику Биндинга
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@922 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/gwt-debug/src/main/webapp/WEB-INF/web.xml
+++ b/lecm-im/gwt-debug/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <!-- Servlets -->
     <servlet>
         <servlet-name>Palladium</servlet-name>
-        <servlet-class>org.xmpp.Palladium.PalladiumServlet</servlet-class>
+        <servlet-class>ru.it.lecm.gwt.debug.server.PalladiumServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
