--- a/lecm-im/pom.xml
+++ b/lecm-im/pom.xml
@@ -21,9 +21,9 @@
     </properties>
 
     <modules>
-        <!-- <module>repo</module> -->
+        <module>repo</module>
         <module>share</module>
         <module>lib</module>
-        <!--<module>gwt-debug</module>-->
+        <module>gwt-debug</module>
     </modules>
 </project>
