--- a/lecm-im/lib/pom.xml
+++ b/lecm-im/lib/pom.xml
@@ -26,6 +26,11 @@
             <version>3.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
