--- a/lecm-im/gwt-debug/pom.xml
+++ b/lecm-im/gwt-debug/pom.xml
@@ -35,6 +35,11 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+			<scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
@@ -103,6 +108,9 @@
         </plugins>
 
         <resources>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
             <resource>
                 <directory>${basedir}/../lib/src/main/resources</directory>
             </resource>
