ALF-306 - Формирование записи бизнес-журнала ALF-307 - Получение записи ALF-308 -Получение перечня записей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@925 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/api/pom.xml
+++ b/lecm-business-journal/api/pom.xml
@@ -83,6 +83,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.base</groupId>
+            <artifactId>base-repo-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
