--- a/lecm-im/repo/pom.xml
+++ b/lecm-im/repo/pom.xml
@@ -37,6 +37,15 @@
             <groupId>org.springframework.extensions.surf</groupId>
             <artifactId>spring-surf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.lecm-im</groupId>
+            <artifactId>lecm-im-lib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
