прописаны зависимости для отладки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@928 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -70,6 +70,12 @@
             </dependency>
             <dependency>
                 <groupId>org.alfresco</groupId>
+                <artifactId>alfresco-web-framework-commons</artifactId>
+                <version>${alfresco.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.alfresco</groupId>
                 <artifactId>alfresco-core</artifactId>
                 <version>${alfresco.version}</version>
                 <scope>provided</scope>
