--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -96,6 +96,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.alfresco</groupId>
+			<artifactId>alfresco-web-framework-commons</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.alfresco</groupId>
 			<artifactId>alfresco-core</artifactId>
 		</dependency>
 		<dependency>
