[~] Запуск машины состояний производится от системного пользователя, а не от текущего пользователя Запуск процессов запускается от имени пользователя, который перевел документ из состояния в состояние Исправлены мелкие ошибки при посторении BPMN схемы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@934 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/pom.xml
+++ b/lecm-statemachine/repo/pom.xml
@@ -53,11 +53,14 @@
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>ru.it.lecm.orgstructure</groupId>
 			<artifactId>orgstructure-repo-api</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>acegisecurity</groupId>
+			<artifactId>acegi-security</artifactId>
 		</dependency>
 
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
