Нарисован датагрид для графиков работы. Добавление обычного графика. Контрол для выбора между сотрудниками и орг. единицами.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@952 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -22,5 +22,13 @@ label.non-working-days-section.title=Non-working days
 message.new-row.success=Element created successfully
 message.new-row.failure=Error creating element
 message.confirm.delete.title=Delete element
-message.confirm.delete.description=This will delete element. Are you shure?
+message.confirm.delete.description=This will delete an element. Are you shure?
 message.new-date.error=Date is already present in calendar
+
+button.new-common-shedule=New common shedule
+button.new-special-shedule=New special shedule
+
+message.time-format.error=Illegal time format
+
+label.form.picker.orgstructure=Organisation unit
+label.form.picker.employees=Employees
