Business journal dashlet
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@958 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get.properties
@@ -1,1 +1,11 @@
 label.title=Business Journal
+
+label.select.days.today=For today
+label.select.days.2days=For last 2 days
+label.select.days.5days=For last 5 days
+label.select.days.10days=For last 10 days
+
+label.select.whose.my=My
+label.select.whose.department=My department
+label.select.whose.control=On control
+label.select.whose.all=All
