ALF-260 Отсутствует проверка на уникальность табельного номера
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@959 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form.properties
@@ -58,3 +58,6 @@ lecm-orgstr_staff-unit=Unit
 lecm-orgstr_boss=Boss
 lecm-orgstr_employee=Employee
 lecm-orgstr_primary-position=Is Primary
+
+lecm-validation-uniqueness-help-id=The field should be unique
+lecm-validation-number-uniqueness-help-id=The field can contain only digits and should be unique
