--- a/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal.properties
@@ -18,16 +18,21 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_messageTemplate-te
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_messageTemplate-template.description=Template String
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_messageTemplate-code.title=Template Code
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_messageTemplate-code.description=Template Code
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_messageTemplate-objType-assoc.title=Object Type
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_messageTemplate-objType-assoc.description=Object Type
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_messageTemplate-evCategory-assoc.title=Event Category
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_messageTemplate-evCategory-assoc.description=Event Category
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_messageTemplate-objType-assoc.title=Object Type
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_messageTemplate-objType-assoc.description=Object Type
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_messageTemplate-evCategory-assoc.title=Event Category
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_messageTemplate-evCategory-assoc.description=Event Category
 
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_bjRecord.title=Business Journal record
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_bjRecord.description=Business Journal record
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-date.title=Date
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-date.description=Date
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-description.title=Description
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-description.description=Description
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-mainObject.title=Main Object
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-mainObject.description=Main Object
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-initiator.title=Initiator
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-inititator.description=Initiator
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj1.description=Secondary Object 1
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj1.title=Secondary Object 1
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj2.description=Secondary Object 2
@@ -38,21 +43,21 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondary
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj4.title=Secondary Object 4
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.description=Secondary Object 5
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.title=Secondary Object 5
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-initiator-assoc.title=Initiator
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-initiator-assoc.description=Initiator
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-mainObject-assoc.title=Main Object
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-mainObject-assoc.description=main Object
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-evCategory-assoc.title=Event category
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-evCategory-assoc.description=Event Category
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-objType-assoc.title=Object Type
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-objType-assoc.description=Object Type
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj1-assoc.title=Secondary Object 1
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj1-associption=Secondary Object 1
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj2-assoc.title=Secondary Object 2
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj2-associption=Secondary Object 2
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj3-assoc.title=Secondary Object 3
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj3-associption=Secondary Object 3
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj4-assoc.title=Secondary Object 4
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj4-associption=Secondary Object 4
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj5-assoc.title=Secondary Object 5
-lecm-busjournal_businessJournalModel.assoc.lecm-busjournal_bjRecord-secondaryObj5-associption=Secondary Object 5
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.title=Initiator
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.description=Initiator
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-mainObject-assoc.title=Main Object
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-mainObject-assoc.description=main Object
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-evCategory-assoc.title=Event category
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-evCategory-assoc.description=Event Category
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-objType-assoc.title=Object Type
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-objType-assoc.description=Object Type
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj1-assoc.title=Secondary Object 1
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj1-associption=Secondary Object 1
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj2-assoc.title=Secondary Object 2
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj2-associption=Secondary Object 2
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj3-assoc.title=Secondary Object 3
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj3-associption=Secondary Object 3
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj4-assoc.title=Secondary Object 4
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj4-associption=Secondary Object 4
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj5-assoc.title=Secondary Object 5
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj5-associption=Secondary Object 5
