--- a/lecm-im/gwt-debug/src/main/webapp/WEB-INF/web.xml
+++ b/lecm-im/gwt-debug/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
     <servlet-mapping>
         <servlet-name>Palladium</servlet-name>
-        <url-pattern>/http-bind/*</url-pattern>
+        <url-pattern>/share/proxy/alfresco/bosh/*</url-pattern>
     </servlet-mapping>
 
 
