ALF-297 - Просмотр сводного журнала ALF-298 - Просмотр полной информации о записи
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@975 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form.properties
@@ -4,3 +4,8 @@ page.business-journal.filter.label=(content filtered)
 
 header.business-journal.label=Business Journal
 header.business-journal.description=Business Journal
+
+info.common-info=Base
+info.secondary-info=Secondary Objects
+
+lecm-busjournal_secondary-objects=Secondary Objects
