поправил сущность "бизнес роль" в модели данных оргструктуры добавил свойство business-role-identifier - уникальный строковый идентификатор для идентификации бизнес ролей добавил свойство business-role-is-dynamic - флаг показывающий является ли бизнес роль динамической в тестовом наборе данных ддля справочника проставил идентификаторы для бизнес ролей поправил формы просмотра, создания, редактирования бизнес ролей с учетом новых свойств
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@981 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure.properties
@@ -160,6 +160,12 @@ lecm-orgstr_organizationStructure.type.business-role.description=Element of busi
 #lecm-orgstr:business-role-description
 lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-description.title=Business role description
 lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-description.description=The description of business role
+#lecm-orgstr:business-role-identifier
+lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-identifier.title=Business role inner identifier
+lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-identifier.description=Inner identifier for business role, must be unique
+#lecm-orgstr:business-role-is-dynamic
+lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-is-dynamic.title=Business role is dynamic
+lecm-orgstr_organizationStructure.property.lecm-orgstr_business-role-is-dynamic.description=Flag for identifing static and dynamic business roles
 #lecm-orgstr:business-role-employee-assoc
 lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-employee-assoc.title=Employees
 lecm-orgstr_organizationStructure.association.lecm-orgstr_business-role-employee-assoc.description=Link to employees
