--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,7 @@
 		        <groupId>org.json</groupId>
 		        <artifactId>com.springsource.org.json</artifactId>
 		        <version>1.0.0</version>
+		        <scope>provided</scope>
 	        </dependency>
             <dependency>
                 <groupId>org.activiti</groupId>
