--- a/lecm-experts/repo/pom.xml
+++ b/lecm-experts/repo/pom.xml
@@ -54,10 +54,10 @@
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-	        <artifactId>com.springsource.org.json</artifactId>
-        </dependency>
+	    <dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+	    </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>alfresco-core</artifactId>
