--- a/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.toolbar.get.properties
+++ b/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.toolbar.get.properties
@@ -1,4 +1,5 @@
-button.new-row=New Item
+button.new-row=New subscriptions
 button.search=Search
 button.ex_search=Extend Search
 button.clear=Clear
+button.delete=Delete
