Исправлено название в диалоговом окне создания.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@996 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form.properties
@@ -16,6 +16,7 @@ button.new-working-day=New working day
 button.new-non-working-day=New non-working day
 
 label.edit-row.title=Edit element
+label.create-row.title=Create
 label.working-days-section.title=Working days
 label.non-working-days-section.title=Non-working days
 
