--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get.properties
@@ -10,6 +10,7 @@ message.employee.position.delete.failure.primary=Can't delete primary position w
 
 label.column.select=Select
 label.column.actions=Actions
+label.create-row.title=Create
 label.edit-row.title=Edit Data Item
 label.edit-row.edit-dataitem=Data Item Edit page...
 
