--- a/server/share/src/main/resources/log4j.properties
+++ b/server/share/src/main/resources/log4j.properties
@@ -188,5 +188,6 @@ log4j.logger.org.alfresco.web.scripts.AlfrescoScriptDebugger=off
 log4j.logger.org.alfresco.repo.web.scripts=${share.log.level}
 log4j.logger.org.alfresco.repo.web.scripts.BaseWebScriptTest=info
 log4j.logger.org.alfresco.repo.web.scripts.AlfrescoRhinoScriptDebugger=off
-log4j.logger.org.alfresco.repo.jscript=error
+log4j.logger.org.alfresco.repo.jscript=DEBUG
+log4j.logger.org.alfresco.repo.jscript.ScriptLogger=DEBUG
 log4j.logger.org.alfresco.repo.cmis.rest.CMISTest=info
