--- a/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.type.grid.get.properties
+++ b/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.type.grid.get.properties
@@ -1,5 +1,6 @@
 label.column.select=Select
 label.column.actions=Actions
+label.create-row.title=Create descriptions
 label.edit-row.title=Edit Data Item
 label.edit-row.edit-dataitem=Data Item Edit page...
 
