--- a/lecm-notifications/pom.xml
+++ b/lecm-notifications/pom.xml
@@ -16,6 +16,7 @@
     <name>Logic ECM Notifications</name>
 
     <modules>
+	    <module>api</module>
         <module>repo</module>
         <module>share</module>
     </modules>
