--- a/lecm-calendar/repo/pom.xml
+++ b/lecm-calendar/repo/pom.xml
@@ -41,12 +41,14 @@
 		</dependency>
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
 		<dependency>
-			<groupId>acegisecurity</groupId>
-			<artifactId>acegi-security</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.orgstructure</groupId>
+			<artifactId>orgstructure-repo-api</artifactId>
+			<version>0.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
