[+] ALF-329, ALF-330. Добавлен интерфес прав доступа для пользователя в определенном статусе.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1008 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model.properties
@@ -1,4 +1,5 @@
 lecm-stmeditor_model.association.lecm-stmeditor_transitionStatus.title=Status
+lecm-stmeditor_model.association.lecm-stmeditor_role-assoc.title=Business Role
 lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=Workflow ID
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=Expression
 lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=Transition Name
@@ -14,6 +15,11 @@ lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=Title
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=Assignee
 lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=Start Status
 lecm-stmeditor_model.property.lecm-stmeditor_archiveFolder.title=Archive Folder
+lecm-stmeditor_model.property.lecm-stmeditor_rolesFolder.title=Business Roles of Process
+lecm-stmeditor_model.property.lecm-stmeditor_creationDocument.title=Creator
+lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=Static Roles
+lecm-stmeditor_model.property.lecm-stmeditor_dynamicRoles.title=Dynamic Roles
+lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=Permission
 
 
 #Status Properties
@@ -33,3 +39,5 @@ lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=Script
 
 listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=Variable
 listconstraint.lecm-stmeditor_variableSettingType.VALUE=Value
+listconstraint.lecm-stmeditor_permissionType.READ=Read
+listconstraint.lecm-stmeditor_permissionType.WRITE=Write
