--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor.properties
@@ -18,6 +18,7 @@ statemachine.editor.form.info=Info
 statemachine.editor.form.behavior=Behavior
 statemachine.editor.form.actions=User Actions
 statemachine.editor.form.events=Event Handlers
+statemachine.editor.form.permissions=Permissions
 
 lecm-stmeditor_statusTransitionType=Transition Type
 lecm-stmeditor_statusExpression=Expression
