--- a/lecm-statemachine-editor/repo/pom.xml
+++ b/lecm-statemachine-editor/repo/pom.xml
@@ -64,6 +64,12 @@
 			<groupId>org.tinyjee.jgraphx</groupId>
 			<artifactId>jgraphx</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>ru.it.lecm.orgstructure</groupId>
+			<artifactId>orgstructure-repo-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
