--- a/pom.xml
+++ b/pom.xml
@@ -75,24 +75,25 @@
         <buildNumber>1</buildNumber>
     </properties>
 
-    <modules>
-        <module>lecm-base</module>
-        <module>lecm-orgstructure</module>
-        <module>lecm-experts</module>
-        <module>lecm-jasperreports-forms</module>
-	    <module>lecm-dictionary</module>
-	    <module>lecm-dictionary-regions</module>
-	    <module>lecm-dictionary-test</module>
-	    <module>lecm-contracts</module>
+	<modules>
+		<module>lecm-base</module>
+		<module>lecm-orgstructure</module>
+		<module>lecm-experts</module>
+		<module>lecm-jasperreports-forms</module>
+		<module>lecm-dictionary</module>
+		<module>lecm-dictionary-regions</module>
+		<module>lecm-dictionary-test</module>
+		<module>lecm-contracts</module>
 		<module>lecm-statemachine</module>
 		<module>lecm-statemachine-editor</module>
 		<module>lecm-theme</module>
-	    <module>lecm-delegation</module>
-	    <module>lecm-subscriptions</module>
-        <module>lecm-notifications</module>
-        <module>lecm-business-journal</module>
-        <module>lecm-calendar</module>
-    </modules>
+		<module>lecm-security</module>
+		<module>lecm-delegation</module>
+		<module>lecm-subscriptions</module>
+		<module>lecm-notifications</module>
+		<module>lecm-business-journal</module>
+		<module>lecm-calendar</module>
+	</modules>
     <scm>
         <connection>scm:svn:https://svn.datateh.ru/alfrescoecm/Business Platform/trunk/</connection>
         <!--<developerConnection>scm:svn:https://${user.name}@domain.com/svn/trunk/</developerConnection>-->
@@ -117,8 +118,8 @@
                 <version>${alfresco.version}</version>
                 <scope>provided</scope>
             </dependency>
-	        <dependency>
-		        <groupId>org.alfresco</groupId>
+            <dependency>
+                <groupId>org.alfresco</groupId>
 		        <artifactId>alfresco-remote-api</artifactId>
 		        <version>${alfresco.version}</version>
 		        <scope>provided</scope>
