ALF-321: Добавлен канал уведомлений - email
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1032 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
 		<module>lecm-delegation</module>
 		<module>lecm-subscriptions</module>
 		<module>lecm-notifications</module>
+		<module>lecm-notifications-email</module>
 		<module>lecm-business-journal</module>
 		<module>lecm-calendar</module>
 	</modules>
